@@ -3,6 +3,7 @@ plugins {
     id 'application'
     id 'com.gradleup.shadow' version '9.5.1'
     id 'checkstyle'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 java {
@@ -12,6 +13,11 @@ java {
 
 repositories {
     mavenCentral()
+}
+
+javafx {
+    version = '25.0.1'
+    modules = [ 'javafx.controls' ]
 }
 
 checkstyle {
@@ -51,7 +57,7 @@ test {
 }
 
 application {
-    mainClass = 'thaisbot.ThaisBot'
+    mainClass = 'thaisbot.gui.Launcher'
 }
 
 jar {
@@ -67,4 +73,5 @@ shadowJar {
 
 run {
     standardInput = System.in
+    jvmArgs '--enable-native-access=javafx.graphics'
 }
